--- a/mysite/blogging/templates/blogging/list.html
+++ b/mysite/blogging/templates/blogging/list.html
@@ -1,13 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Posts</h1>
-{% for post in posts %}
-    <div class="post">
-        <h2>
-	<ul>
-            <a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a>
-	</ul>
-        </h2>
+<h1>Recent Posts</h1>
+  {% comment %} here is where the query happens {% endcomment %}
+  {% for post in posts %}
+  <div class="post">
+    <h2>{{ post }}</h2>
+    <p class="byline">
+      Posted by {{ post.author.username }} &mdash; {{ post.published_date }}
+    </p>
+    <div class="post-body">
+      {{ post.text }}
     </div>
-{% endfor %}
+    <ul class="categories">
+      {% for category in post.categories.all %}
+        <li>{{ category }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endfor %}
 {% endblock %}
