--- a/mysite/blogging/templates/blogging/detail.html
+++ b/mysite/blogging/templates/blogging/detail.html
@@ -1,11 +1,17 @@
 {% extends "base.html" %}
+
 {% block content %}
-<h1>{{ post.title }}</h1>
+<a class="backlink" href="/">Home</a>
+<h1>{{ post }}</h1>
+<p class="byline">
+  Posted by {{ post.author.username }} &mdash; {{ post.published_date }}
+</p>
 <div class="post-body">
-    {{ post.text }} <br>
-    Author: {{ post.author }} <br>
-    Created: {{ post.created_date }} <br>
-    Last Modified: {{ post.modified_date }} <br>
-    Published: {{ post.published_date }}
+  {{ post.text }}
 </div>
+<ul class="categories">
+  {% for category in post.categories.all %}
+    <li>{{ category }}</li>
+  {% endfor %}
+</ul>
 {% endblock %}
