--- a/mysite/blogging/templates/blogging/list.html
+++ b/mysite/blogging/templates/blogging/list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Recent Posts</h1>
+<h1>My Cool Blog Posts</h1>
   {% for post in posts %}
   <div class="post">
     <h2><a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a></h2>
